@@ -1,3 +1,13 @@
+2025-07-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-barf-if-file-missing)
+	(with-parsed-tramp-file-name, tramp-skeleton-file-truename):
+	* tramp-archive.el (with-parsed-tramp-archive-file-name):
+	* tramp-message.el (tramp-with-demoted-errors): Fix debug declatation.
+
+	* tramp-sh.el (tramp-sh-gio-monitor-process-filter): Do not
+	prepend remote prefix.
+
 2025-07-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-cmds.el (tramp-get-file-name-with-method): New defun.
